Starting point, trying to sort out all sbt issues.